[package]
name = "libblkid-rs"
version = "0.3.1"
authors = ["John Baublitz <jbaublitz@redhat.com>"]
edition = "2021"
rust-version = "1.71.1"  # LOWEST SUPPORTED RUST TOOLCHAIN
description = "High level bindings for libblkid"
license = "MPL-2.0"
documentation = "https://docs.rs/libblkid-rs"
homepage = "https://stratis-storage.github.io"
repository = "https://github.com/stratis-storage/libblkid-rs"
categories = ["os::linux-apis", "api-bindings"]
keywords = ["storage"]
exclude = [".clippy.toml", ".githooks/*", ".github/*", ".gitignore", "Makefile"]

[dependencies.libblkid-rs-sys]
version = "0.3.0"
path = "./libblkid-rs-sys"

[dependencies]
either = "1.6.1"
libc = "0.2.121"
uuid = "1.0.0"

[features]
default = []
deprecated = []
