[package]
name = "libblkid-rs"
version = "0.4.0"
authors = ["John Baublitz <jbaublitz@redhat.com>"]
edition = "2021"
rust-version = "1.74.0"  # LOWEST SUPPORTED RUST TOOLCHAIN
description = "High level bindings for libblkid"
license = "MPL-2.0"
documentation = "https://docs.rs/libblkid-rs"
homepage = "https://stratis-storage.github.io"
repository = "https://github.com/stratis-storage/libblkid-rs"
categories = ["os::linux-apis", "api-bindings"]
keywords = ["storage"]
exclude = [".clippy.toml", ".githooks/*", ".github/*", ".gitignore", "Makefile"]

[dependencies.libblkid-rs-sys]
version = "0.3.1"
path = "./libblkid-rs-sys"

[dependencies]
either = "1.6.1"
libc = "0.2.121"
uuid = "1.0.0"

[features]
default = []
deprecated = []
static = ["libblkid-rs-sys/static"]
bindgen_stable_182_rust_target = ["libblkid-rs-sys/bindgen_stable_182_rust_target"]
bindgen_stable_177_rust_target = ["libblkid-rs-sys/bindgen_stable_177_rust_target"]
bindgen_lowest_rust_target = ["libblkid-rs-sys/bindgen_lowest_rust_target"]
bindgen_nightly_rust_target = ["libblkid-rs-sys/bindgen_nightly_rust_target"]

[lints.rust]
warnings = { level = "deny" }
future_incompatible = { level = "deny", priority = 1 }
unused = { level = "deny", priority = 2}
rust_2018_idioms = { level = "deny", priority = 3 }
nonstandard_style = { level = "deny", priority = 4 }

[lints.clippy]
all = { level = "deny" }
cargo = { level = "deny" , priority = 1}
from_over_into = { level = "allow", priority = 2 }
