[package]
name = "libblkid-rs-sys"
version = "0.3.0"
authors = ["John Baublitz <jbaublitz@redhat.com>"]
edition = "2021"
rust-version = "1.71.1"  # LOWEST SUPPORTED RUST TOOLCHAIN
description = "Low level bindings for libblkid"
license = "MPL-2.0"
documentation = "https://docs.rs/libblkid-rs-sys"
homepage = "https://stratis-storage.github.io"
repository = "https://github.com/stratis-storage/libblkid-rs"
categories = ["os::linux-apis", "external-ffi-bindings"]
keywords = ["storage"]

[build-dependencies]
cc = "1.0.45"

[build-dependencies.bindgen]
default_features = false
features = ["runtime"]
version = "0.69.0"
