[package]
name = "libblkid-rs-sys"
version = "0.3.0"
authors = ["John Baublitz <jbaublitz@redhat.com>"]
edition = "2021"
rust-version = "1.71.1"  # LOWEST SUPPORTED RUST TOOLCHAIN
description = "Low level bindings for libblkid"
license = "MPL-2.0"
documentation = "https://docs.rs/libblkid-rs-sys"
homepage = "https://stratis-storage.github.io"
repository = "https://github.com/stratis-storage/libblkid-rs"
categories = ["os::linux-apis", "external-ffi-bindings"]
keywords = ["storage"]

[build-dependencies]
cc = "1.0.45"
pkg-config = "0.3.31"
cfg-if = "1.0.0"

[build-dependencies.bindgen]
default-features = false
features = ["runtime"]
version = "0.69.0"

[lints.rust]
warnings = { level = "deny" }
future_incompatible = { level = "deny", priority = 1 }
unused = { level = "deny", priority = 2}
rust_2018_idioms = { level = "deny", priority = 3 }
nonstandard_style = { level = "deny", priority = 4 }

[lints.clippy]
all = { level = "deny" }
cargo = { level = "deny" , priority = 1}

[features]
static = ["pkg-config"]
pkg-config = []